--- a/services/node-port.yml
+++ b/services/node-port.yml
@@ -6,6 +6,7 @@ spec:
   type: NodePort
   selector:
     app: nginx
+    # app.kubernetes.io/name: webserver
   ports:
     - port: 80
       targetPort: 80
